frontend/test/should_pass/castModel2.gm
node class N
{
	a:int;
}

node class NN extends N
{
	aa:int;
}

edge class E
{
	a:int;
}

edge class EE extends E
{
	aa:int;
}

node edge unique;
