frontend/test/should_fail/method_model_inh_ovrrd_failxf.gm
external class N
{
	external function foo() : int;
	external function qux(int) : string;
}

external class NN extends N
{
	external function foo(int) : int;
	external function qux() : string;
}
